Revert "format moment"
This reverts commit 9543a14d